@startuml simplified_class_diagram_of_package_search

skinparam linetype ortho
skinparam packageStyle rectangle
skinparam PackageBorderColor transparent
skinparam PackageBackgroundColor #EEEEEE
skinparam defaultFontName "Atkinson Hyperlegible Next"

hide empty members

left to right direction

!function $type($name)
!return "struct " + $name + " << (T,lavender) >>"
!endfunction


abstract class TreeNode {
  - indexOfPlayedMove: IndexOfMove
  - indexOfPlayerWhoPlayedMove: IndexOfPlayer
  # state: State
  - parentNode: TreeNode
  # childrenNodes: Map<IndexOfMove, TreeNode | null>
  - qualityOfMatch: QualityOfMatch
  - qualityOfVisits: Integer
  --
  + getChildNode( { indexOfChildNode: IndexOfMove } ) : ChildNode | null
  + getQualityOfMatchFromScore( { score: Score } ) : QualityOfMatch
  + getQualityOfMove(): QualityOfMove
  + calculateFitnessOfChildNode( { childNode: TreeNode, explorationCoefficient: number } ) : number
  + selectBestChildNode( { explorationCoefficient: ExplorationCoefficient } ) : TreeNode | null
  + updateQualityOfMatchAndQuantityOfVisitsOnBranch( { qualityOfMatch: QualityOfMatch } ) : void
  ..abstract..
  + {abstract} calculateExploitationComponentOfFitness( { childNode: TreeNode } ) : number
  + {abstract} calculateExplorationComponentOfFitness( { childNode: TreeNode, explorationCoefficient: number } ) : number
}
TreeNode -->TreeNode

abstract class Search {
  # explorationCoefficient: ExplorationCoefficient
  # quantityOfExpansions: Integer
  # random: Random
  ..abstract..
  + {abstract} expandTree( { state: State } ) : TreeNode
  + {abstract} selectNextNode( { rootNode: TreeNode } ) : TreeNode
  + {abstract} simulateMatch( { state: State } ) : Score
}

' class CommonTreeNode {
'   + expand( { indexOfMove: IndexOfMove } ): TreeNode
' }
' CommonTreeNode --|> TreeNode

' class AgentGuidedTreeNode {
'   - qualityOfMoveAttributedByModel: QualityOfMove | null
'   + expand( {\n    qualitiesOfMoveAttributedByModel: QualityOfMove[]\n  } ): Map<IndexOfMove, TreeNode>
' }
' AgentGuidedTreeNode --|> TreeNode

@enduml
